--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
-       <meta-data android:name="com.google.android.geo.AIzaSyAQ5CdpHDSVHqCUt8w8j-_9UOjQCaqpNDY"
-           android:value="AIzaSyAQ5CdpHDSVHqCUt8w8j-_9UOjQCaqpNDY"/>
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyC1HvKLPSVhF5qQaoQli8J1y_Fh2MaCV7M"/>
 
         <activity
             android:name=".MainActivity"
